# E_TALKS

./: .env  DESCRIPTION.md  README.md  bot.py  button_handler.py  channel_manager.py  communication_logger.py  config.py  consent_manager.py  contact_manager.py  content_moderator.py  content_sharing.py  conversation_manager.py  group_manager.py  join_request_handler.py  leave_handler.py  leave_request_handler.py  member_migration.py  membership_checker.py  membership_manager.py  message_forwarder.py  multi_account_handler.py  problem_clarification_needed.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  session_manager.py  setup.py  subscription_control.py  subscription_enforcer.py  user_manager.py
data/: blocked_users.txt  contacts_data.json
emamutalks/: __init__.py
emamutalks.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_buttons.py  test_buttons_sync.py
