[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emamutalks"
version = "0.1.0"
authors = [
    { name="Temesgen Abdissa", email="temesgenabdissa2@gmail.com" },
]
description = "Telegram bot for EmamuTalks"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
] 